<resources>
    <string name="app_name">Natashasapplication2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_iphone_14_thr">iPhone 14 - Three</string>
<string name="msg_raspberry_milks">Raspberry Milkshake </string>
<string name="lbl_item_s_added">ITEM(S) ADDED</string>
<string name="lbl_buy">BUY</string>
<string name="msg_delicious_combo">Delicious combo: Juicy  black bean burger, golden fries, coke</string>
<string name="msg_iphone_14_thi">iPhone 14 - ThirtyThree</string>
<string name="lbl_b_u_r_g_e_r">B U R G E R</string>
<string name="lbl_4_1_5">★ (4.1/5)</string>
<string name="lbl_enter_feedback">Enter Feedback</string>
<string name="msg_precise_locatio">Precise location, 
smoother delivery</string>
<string name="msg_123_main_street2">123 Main Street Anytown,  Dalas Apartment, 4th floor,United  States</string>
<string name="lbl_whipped_cream">Whipped Cream</string>
<string name="msg_student_discoun">Student Discounts</string>
<string name="lbl_view_activity">View Activity</string>
<string name="lbl_sugar_10g">Sugar:  10g</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_7_76">$7.76</string>
<string name="lbl_brownie_bits">Brownie Bits</string>
<string name="lbl_10_am_to_10_pm">10:am to 10 pm</string>
<string name="msg_tell_us_what_yo">Tell us what you love about the app, or
what we could be doing better.</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_180kcal">180kcal</string>
<string name="lbl_desserts">Desserts </string>
<string name="lbl_golden">golden</string>
<string name="msg_avocado_bacon_b">Avocado Bacon Burger</string>
<string name="msg_iphone_14_sev">iPhone 14 - SeventyFour</string>
<string name="lbl_log_out">Log out</string>
<string name="msg_bbq_bacon_burge">BBQ Bacon Burger</string>
<string name="lbl_11_49">$11.49</string>
<string name="msg_eligibility_th">Eligibility: The Student Rewards program is open to students currently enrolled in a recognized educational institution. Proof of student status, such as a valid student ID or verified email address, may be required for enrollment and participation.</string>
<string name="lbl_edit">Edit</string>
<string name="msg_flavorful_trio">Flavorful Trio Feast</string>
<string name="msg_black_bean_burg2">black bean burger</string>
<string name="msg_define_what_ale">Define what alerts and notifications you want 
to see</string>
<string name="msg_chicken_burger">Chicken Burger bliss meets Oreo dessert - a perfect combo of savory and indulgence!</string>
<string name="lbl_change">Change</string>
<string name="lbl_clear_all">Clear all</string>
<string name="lbl_claim_discount">Claim  Discount</string>
<string name="lbl_s_e_a_r_c_h">S E A R C H</string>
<string name="msg_leave_with_guar">Leave
with guard</string>
<string name="lbl_size">Size</string>
<string name="lbl_view_on_map">View on Map</string>
<string name="lbl_select">Select</string>
<string name="lbl_your_location">Your  Location</string>
<string name="lbl_iphone_14_six">iPhone 14 - Six</string>
<string name="msg_mushroom_swiss">Mushroom Swiss Burger</string>
<string name="lbl_hot">Hot</string>
<string name="msg_iphone_14_twe">iPhone 14 - Twelve</string>
<string name="msg_distance_7_5_k">Distance:
7.5 km (20 min ride)</string>
<string name="msg_delicious_combo2">Delicious combo: Juicy  </string>
<string name="lbl_gender">Gender</string>
<string name="lbl_panna_cotta">Panna Cotta</string>
<string name="lbl_distance">Distance</string>
<string name="lbl_add2">Add   </string>
<string name="msg_restaurant_s_n">Restaurant(s) near your location</string>
<string name="lbl_bbq">BBQ</string>
<string name="msg_order_to_earn_p">Order to earn points</string>
<string name="msg_7_5_km_20_min">7.5 km (20 min ride)</string>
<string name="msg_are_you_sure_yo">Are you sure you want to delete this address?</string>
<string name="lbl_sort_by">Sort by</string>
<string name="lbl_delete">Delete </string>
<string name="msg_don_t_ring_the">Don\u2019t ring
the bell</string>
<string name="msg_offer_available">Offer available for a limited time.</string>
<string name="msg_your_loyalty_r">Your  Loyalty Rewards </string>
<string name="lbl_5_592">5.59</string>
<string name="lbl_save2">Save</string>
<string name="msg_bacon_cheesebur">Bacon Cheeseburger</string>
<string name="lbl_hot_deals">Hot Deals</string>
<string name="lbl_mustard">Mustard</string>
<string name="msg_studenrs_discou">Studenrs discounts</string>
<string name="lbl_protien_25g">Protien:  25g</string>
<string name="msg_iphone_14_fiv">iPhone 14 - Five</string>
<string name="msg_iphone_14_nin">iPhone 14 - Nine</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_iphone_14_fif7">iPhone 14 - FiftyThree</string>
<string name="msg_iphone_14_fif5">iPhone 14 - FiftyOne</string>
<string name="msg_iphone_14_for10">iPhone 14 - FortyNine</string>
<string name="msg_iphone_14_fif6">iPhone 14 - FiftyTwo</string>
<string name="msg_iphone_14_fif3">iPhone 14 - FiftyEight</string>
<string name="msg_iphone_14_for9">iPhone 14 - FortyEight</string>
<string name="msg_iphone_14_fif4">iPhone 14 - Fifty</string>
<string name="msg_iphone_14_for7">iPhone 14 - FortySix</string>
<string name="msg_iphone_14_fif2">iPhone 14 - FiftyNine</string>
<string name="msg_iphone_14_for8">iPhone 14 - FortySeven</string>
<string name="msg_loyalty_reward">Loyalty  Rewards</string>
<string name="msg_iphone_14_for5">iPhone 14 - FortyFour</string>
<string name="msg_iphone_14_for6">iPhone 14 - FortyFive</string>
<string name="msg_iphone_14_for3">iPhone 14 - FortyTwo</string>
<string name="msg_iphone_14_for4">iPhone 14 - FortyThree</string>
<string name="msg_iphone_14_for2">iPhone 14 - FortyOne</string>
<string name="msg_iphone_14_fif">iPhone 14 - FiftySeven</string>
<string name="lbl_chef">Chef</string>
<string name="msg_notification_se">Notification settings</string>
<string name="lbl_apply">Apply</string>
<string name="msg_terms_and_condi">Terms and Conditions


Welcome to the Student Rewards program of Burgeropia! Please read these terms and conditions carefully before participating. By enrolling in and using the Student Rewards program, you agree to be bound by these terms and conditions. If you do not agree with any part of these terms, you may not participate in the program.
</string>
<string name="msg_strawberry_lime2">Strawberry Limeade </string>
<string name="lbl_american">American</string>
<string name="lbl_all_devices">All  Devices</string>
<string name="lbl_add_photo">Add Photo</string>
<string name="lbl_sugar_14g">Sugar:  14g</string>
<string name="msg_welcome_to_the">Welcome to the Student Rewards program of Burgeropia! Please read these terms and conditions carefully before participating. By enrolling in and using the Student Rewards program, you agree to be bound by these terms and conditions. If you do not agree with any part of these terms, you may not participate in the program.
</string>
<string name="lbl_wholemeal">Wholemeal</string>
<string name="msg_discount_detail">Discount Details</string>
<string name="lbl_onion">Onion</string>
<string name="msg_takeaway_dine">Takeaway / Dine-in</string>
<string name="msg_special_request">Special Requests\u2028 -------------------\u2028Type any special requests here...</string>
<string name="lbl_yes">Yes</string>
<string name="lbl_320_g">320 g</string>
<string name="lbl_jalapenos">Jalapenos</string>
<string name="lbl_fat_18g">Fat:  18g</string>
<string name="lbl_add_address">Add Address</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_business">Business</string>
<string name="lbl_iphone_14_two">iPhone 14 - Two</string>
<string name="lbl_12_56">$12.56</string>
<string name="msg_if_you_have_any">If you have any questions or concerns regarding the Student Rewards program or these terms and conditions, please contact us at [contact information].</string>
<string name="msg_enjoy_exclusive">Enjoy exclusive  discounts and perks 
designed for students</string>
<string name="msg_earning_rewards">Earning Rewards: By participating in the program, you may earn rewards points for qualifying purchases made at Burgeropia. The accumulation and redemption of rewards points are subject to the rules and guidelines determined by Burgeropia, which may be modified or terminated at any time.</string>
<string name="msg_account_respons">Account Responsibility: You are responsible for maintaining the security and confidentiality of your Student Rewards account. Any activity conducted through your account will be deemed your responsibility, and Burgeropia shall not be liable for any unauthorized use or access.</string>
<string name="msg_students_discou">Students Discounts</string>
<string name="msg_enrollment_to">Enrollment: To join the Student Rewards program, you must create an account within the Burgeropia app and provide the necessary information for verification purposes. You are responsible for ensuring the accuracy and validity of the information provided.</string>
<string name="msg_valid_for_stude">Valid for students with a valid
student ID.</string>
<string name="msg_program_abuse">Program Abuse: Any misuse, fraud, or abuse of the Student Rewards program or violation of these terms and conditions may result in the termination of your account and forfeiture of accumulated rewards points.</string>
<string name="lbl3">  _______________</string>
<string name="msg_submit_feedbac">Submit  Feedback</string>
<string name="msg_student_id_em">Student id / Email Address</string>
<string name="msg_general_these">General: These terms and conditions constitute the entire agreement between you and Burgeropia regarding the Student Rewards program and supersede any prior agreements or understandings. These terms shall be governed by and construed in accordance with the laws of [Jurisdiction], and any disputes shall be subject to the exclusive jurisdiction of the courts of [Jurisdiction].</string>
<string name="msg_personal_inform">"Personal Information: By participating in the Student Rewards program, you consent to the collection, use, and disclosure of your personal information in accordance with Burgeropia's Privacy Policy. Your information will be used solely for program-related purposes and will not be shared with third parties without your consent."</string>
<string name="msg_redemption_of_r">Redemption of Rewards: Rewards points earned can be redeemed for eligible products or services specified by Burgeropia. The redemption process, eligible items, and any additional terms will be communicated through the app or other designated channels.</string>
<string name="msg_program_changes">Program Changes and Termination: Burgeropia reserves the right to modify, suspend, or terminate the Student Rewards program, in whole or in part, at any time without prior notice. Any changes to the program will be communicated through the app or other designated channels.</string>
<string name="msg_save_15_on_you"> Save 15% on your order!</string>
<string name="msg_program_benefit">Program Benefits: As a member of the Student Rewards program, you will be eligible for exclusive benefits, including discounts, special promotions, and access to limited-time offers. The specific benefits may vary and will be communicated to you through the app or other designated channels.</string>
<string name="msg_to_claim_your_d">To claim your discount, please enter your student ID or email address from your educational institution.</string>
<string name="lbl_send_feedback">Send Feedback</string>
<string name="msg_verification_pr">Verification Process</string>
<string name="msg_by_participatin">By participating in the Student Rewards program, you acknowledge that you have read and understood these terms and conditions and agree to be bound by them. Enjoy your rewards at Burgeropia!</string>
</resources>