<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone14FiftysevenVM" type="com.natashasapplication.app.modules.iphone14fiftyseven.data.viewmodel.Iphone14FiftysevenVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumngroup387"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylepurple_700_f2">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnarrowleft"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarNavigationbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtStudentsDiscou"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtStudentsDiscou}"
                        style="@style/txtMerriweatherSansromanregular20" tools:text="@string/msg_students_discou"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescription}"
                style="@style/txtMerriweatherregular16" tools:text="@string/msg_enjoy_exclusive"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <FrameLayout android:id="@+id/frameIPhone14Fif"
                android:layout_height="3143dp" android:layout_width="match_parent">
                <View android:background="@color/white_A700"
                    android:id="@+id/viewGroup387"
                    android:layout_gravity="start"
                    android:layout_height="3093dp" android:layout_width="@dimen/_353pxh"/>
                <LinearLayout
                    android:id="@+id/linearColumndiscountdetail"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <FrameLayout
                        android:id="@+id/frameStackdiscountdetail"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_47pxv" android:layout_width="@dimen/_240pxh">
                        <TextView android:ellipsize="end"
                            android:gravity="top|start"
                            android:id="@+id/txtDiscountDetail"
                            android:layout_gravity="top|start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDiscountDetail}"
                            style="@style/txtMerriweatherSansitalicbold20" tools:text="@string/msg_discount_detail"/>
                        <TextView android:ellipsize="end"
                            android:gravity="top|start"
                            android:id="@+id/txtLanguage"
                            android:layout_gravity="bottom|start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtLanguage}"
                            style="@style/txtMerriweatherregular19" tools:text="@string/lbl3"/>
                    </FrameLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowstar"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageStar"
                            android:layout_height="@dimen/_25pxh"
                            android:layout_width="@dimen/_25pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLanguageOne"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtLanguageOne}"
                            style="@style/txtMerriweatherSansromanregular17" tools:text="@string/msg_save_15_on_you"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowstarOne"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageStarOne"
                            android:layout_height="@dimen/_25pxh"
                            android:layout_width="@dimen/_25pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                        <TextView android:id="@+id/txtValidforstude"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtValidforstude}"
                            style="@style/txtMerriweatherSansromanregular17" tools:text="@string/msg_valid_for_stude"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowstarTwo"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageStarTwo"
                            android:layout_height="@dimen/_25pxh"
                            android:layout_width="@dimen/_25pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtOfferavailable"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtOfferavailable}"
                            style="@style/txtMerriweatherSansromanregular17" tools:text="@string/msg_offer_available"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearColumnverificationpr"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtVerificationPr"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtVerificationPr}"
                        style="@style/txtMerriweatherSansitalicbold20" tools:text="@string/msg_verification_pr"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguageTwo"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtLanguageTwo}"
                        style="@style/txtMerriweatherregular19" tools:text="@string/lbl3"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtToclaimyourd"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtToclaimyourd}"
                        style="@style/txtMerriweatherSansromanregular17" tools:text="@string/msg_to_claim_your_d"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnstudentidem"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtStudentidEm"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtStudentidEm}"
                        style="@style/txtMerriweatherSansromanregular16_3" tools:text="@string/msg_student_id_em"/>
                    <View
                        android:background="@drawable/rectangle_gradient_s_white_a700_c_gray_400_e_white_a700_00_border_gray_900_radius_19"
                        android:id="@+id/viewRectangleSix"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_41pxv" android:layout_width="@dimen/_304pxh"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnClaimDiscountOne"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_48pxv"
                        android:layout_width="@dimen/_170pxh"
                        android:paddingHorizontal="@dimen/_11pxh"
                        android:paddingVertical="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_claim_discount"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_4" tools:text="@string/lbl_claim_discount"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearColumndescriptionOne"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionOne"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionOne}"
                        style="@style/txtMerriweatherSansromanregular14_2" tools:text="@string/msg_terms_and_condi"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionTwo"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionTwo}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_eligibility_th"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionThree"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionThree}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_program_benefit"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionFour"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionFour}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_enrollment_to"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionFive"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionFive}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_earning_rewards"/>
                    <TextView android:id="@+id/txtDescriptionSix"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionSix}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_redemption_of_r"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionSeven"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionSeven}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_program_changes"/>
                    <TextView android:id="@+id/txtDescriptionEight"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionEight}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_personal_inform"/>
                    <TextView android:id="@+id/txtDescriptionNine"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionNine}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_account_respons"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionTen"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionTen}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_program_abuse"/>
                    <TextView android:id="@+id/txtDescriptionEleven"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionEleven}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_general_these"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionTwelve"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionTwelve}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_by_participatin"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescriptionThirteen"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{iphone14FiftysevenVM.iphone14FiftysevenModel.txtDescriptionThirteen}"
                        style="@style/txtMerriweatherSansromanregular14_5" tools:text="@string/msg_if_you_have_any"/>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>
